k8s/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: account
  template:
    metadata:
      labels:
        component: account
    spec:
      containers:
        - name: account
          image: 1608996/account
          ports:
            - containerPort: 80
