k8s/location-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: location
  template:
    metadata:
      labels:
        component: location
    spec:
      containers:
        - name: location
          image: 1608996/location
          ports:
            - containerPort: 3000
