k8s/paymentdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentdb-deployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      component: paymentdb
  template:
    metadata:
      labels:
        component: paymentdb
    spec:
      containers:
        - name: paymentdb
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
