k8s/route-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: route
  template:
    metadata:
      labels:
        component: route
    spec:
      containers:
        - name: route
          image: 1608996/route
          ports:
            - containerPort: 80
