k8s/routedb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routedb-deployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      component: routedb
  template:
    metadata:
      labels:
        component: routedb
    spec:
      containers:
        - name: routedb
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
