k8s/ticket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-deployment
spec:
  replicas: 0
  selector:
    matchLabels:
      component: ticket
  template:
    metadata:
      labels:
        component: ticket
    spec:
      containers:
        - name: ticket
          image: 1608996/ticket
          ports:
            - containerPort: 80
