k8s/accountdb-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accountdb-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: accountdb
  ports:
    - port: 1434
      targetPort: 1433
