k8s/location-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: location-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: location
  ports:
    - port: 3000
      targetPort: 3000
