k8s/payment-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: payment
  ports:
    - port: 6003
      targetPort: 80
