k8s/route-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: route-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: route
  ports:
    - port: 6004
      targetPort: 80
