k8s/routedb-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: routedb-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: routedb
  ports:
    - port: 1436
      targetPort: 1433
