k8s/ticket-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: ticket
  ports:
    - port: 5001
      targetPort: 80
