k8s/ticketdb-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketdb-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: ticketdb
  ports:
    - port: 1434
      targetPort: 1433
