k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/account/?(.*)
            backend:
              serviceName: account-cluster-ip-service
              servicePort: 6001
          - path: /api/ticket/?(.*)
            backend:
              serviceName: ticket-cluster-ip-service
              servicePort: 6002
          - path: /api/payment/?(.*)
            backend:
              serviceName: payment-cluster-ip-service
              servicePort: 6003
          - path: /api/route/?(.*)
            backend:
              serviceName: route-cluster-ip-service
              servicePort: 6004
          - path: /api/location/?(.*)
            backend:
              serviceName: location-cluster-ip-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 4200
